--- a/package.json
+++ b/package.json
@@ -9,34 +9,35 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "main": "server.js",
+  "bin": {
+    "template-development-server": "./server.js"
+  },
   "dependencies": {
-    "node-sass": "^4.14.1",
-    "rollup": "1.30.1",
-    "chalk": "^2.4.2",
-    "clear": "^0.1.0",
-    "figlet": "^1.2.4",
-    "live-server": "~1.2.1",
-    "express": "~4.17.1",
-    "body-parser": "~1.9",
-    "cookie": "~0.1",
-    "forever": "~0.11",
-    "fs-extra": "~0.12",
-    "open": "0.0.5",
-    "request": "~2",
-    "slug": "~0.7",
-    "npm-run-all": "^2.1.1"
+    "chalk": "^4.1.2",
+    "chokidar": "^4.0.3",
+    "command-line-args": "^6.0.1",
+    "css-loader": "^7.1.2",
+    "figlet": "^1.8.0",
+    "fs-extra": "^11.3.0",
+    "grunt": "^1.6.1",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-webpack": "^7.0.0",
+    "live-server": "^1.2.2",
+    "mini-css-extract-plugin": "^2.9.2",
+    "node-watch": "^0.7.4",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.83.1",
+    "sass-loader": "^16.0.4",
+    "watch": "^1.0.2",
+    "webpack": "^5.97.1"
   },
   "devDependencies": {},
   "scripts": {
-    "postinstall": "node postinstall.js",
-    "start-server": "node ./server.js",
-    "sass:build": "node-sass --output-style compressed src/scss/style.scss -o build/assets/css --source-map true",
-    "sass:watch": "node-sass src/scss/style.scss -wo build/assets/css --source-map true",
-    "build:css": "run-s lint-scss scss autoprefixer",
-    "build:js": "run-s lint uglify",
-    "build:images": "run-s imagemin icons",
-    "build": "run-s build:*",
-    "watch:css": "onchange \"src/scss\" -- run-s build:css",
-    "watch": "run-p start-server sass:*"
+    "grunt:build": "grunt webpack",
+    "grunt:watch": "grunt watch",
+    "start-server": "node server.js",
+    "template-parser": "node --trace-warnings bin/compile.js --src src/html --dest dist --dataDir src/html/data --partials src/html/partials",
+    "start": "npm-run-all --parallel grunt:watch template-parser start-server"
   }
 }
