--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "chalk": "^4.1.2",
     "chokidar": "^4.0.3",
     "command-line-args": "^6.0.1",
-    "css-loader": "^7.1.2",
     "figlet": "^1.8.0",
     "fs-extra": "^11.3.0",
+    "live-server": "^1.2.2"
+  },
+  "devDependencies": {
+    "css-loader": "^7.1.2",
     "grunt": "^1.6.1",
     "grunt-contrib-concat": "^2.1.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-webpack": "^7.0.0",
-    "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.9.2",
     "node-watch": "^0.7.4",
     "npm-run-all": "^4.1.5",
@@ -32,12 +34,8 @@
     "watch": "^1.0.2",
     "webpack": "^5.97.1"
   },
-  "devDependencies": {},
   "scripts": {
-    "grunt:build": "grunt webpack",
-    "grunt:watch": "grunt watch",
     "start-server": "node server.js",
-    "watch-html": "node --trace-warnings bin/template-compiler.js --src src/html --dest dist --data-src src/html/data --partials src/html/partials",
-    "start": "npm-run-all --parallel grunt:watch watch-html start-server"
+    "watch-html": "node --trace-warnings bin/template-compiler.js --src src/html --dest dist --data-src src/html/data --partials src/html/partials"
   }
 }
